# r5v_script_studio

./: .gitignore  MISSING_NODES.md  README.md  astro.config.mjs  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: build-linux.yml  build-windows.yml
app/: App.tsx
app/components/visual-scripting/: NodePalette.tsx  ProjectSettingsModal.tsx  ProjectSidebar.tsx  QuickNodeMenu.tsx  ReactFlowGraph.tsx  SaveTemplateModal.tsx  SettingsModal.tsx  UITextEditor.tsx  WeaponEditor.tsx  WelcomeScreen.tsx
app/data/: node-definitions.ts  viewkick-patterns.ts
app/hooks/: useProjectFiles.ts
app/styles/: global.css
app/types/: project.ts  tauri.d.ts  visual-scripting.ts
app/utils/: code-generator.ts  file-system.ts  mod-compiler.ts  project-manager.ts  tauri-api.ts  template-storage.ts
js/: main.js  preload.cjs
scripts/: bundleElectron.cjs
src/components/: CodeEditor.tsx  FileExplorer.tsx  ModStudio.tsx  PropertyInspector.tsx  ScriptTreeView.tsx  VisualScriptEditor.tsx  VisualScriptingCanvas.tsx
src/components/modals/: NewModModal.tsx
src/data/: built-in-templates.ts  node-definitions.ts  weapon-templates.ts
src/hooks/: useProject.ts  useProjectFiles.ts
src/pages/: index.astro
src/styles/: global.css
src/types/: electron.d.ts  project.ts  visual-scripting.ts
src/utils/: code-generator.ts  file-system.ts  mod-compiler.ts  project-manager.ts  squirrelParser.ts  vdfParser.ts  weaponTxtParser.ts
tauri/: Cargo.toml  tauri.conf.json
tauri/capabilities/: default.json
tauri/icons/: icon.icns
tauri/src/: main.rs
(+21 files in other folders)
