[package]
name = "r5v-studio"
version = "0.1.0"
description = "Visual modding tool for Apex Legends R5Valkyrie"
authors = ["R5Valkyrie <dev@r5valkyrie.org>"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
flate2 = "1"
